fix: improve contrast support for traveltag
affects: @entur/travel

--- a/packages/travel/src/TravelTag.scss
+++ b/packages/travel/src/TravelTag.scss
@@ -57,17 +57,26 @@
     position: absolute;
     top: ($space-extra-large - ($space-default + $border-widths-medium))/2;
     right: -($space-default + $border-widths-medium)/2;
-    .eds-contrast {
+    .eds-contrast & {
       background: $colors-brand-blue;
     }
     &-exclamation-icon {
       color: $colors-validation-sky;
+      .eds-contrast & {
+        color: $colors-validation-sky-contrast;
+      }
     }
     &-error-icon {
       color: $colors-validation-lava;
+      .eds-contrast & {
+        color: $colors-validation-lava-contrast;
+      }
     }
     &-info-icon {
       color: $colors-validation-sky;
+      .eds-contrast & {
+        color: $colors-validation-sky-contrast;
+      }
     }
   }
 }
